unpackaged/main/default/objects/Group__mdt/Group__mdt.object-meta.xml
<CustomObject>
    <label>Group</label>
    <pluralLabel>Groups</pluralLabel>
</CustomObject>