unpackaged/main/default/objects/Group__mdt/fields/Group_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Name__c</fullName>
    <label>Group Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>