unpackaged/main/default/objects/Group__mdt/fields/Group_Size_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Group_Size_Inbound__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Group Size (Inbound)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>