unpackaged/main/default/objects/Group__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Object_Setting__mdt</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>