unpackaged/main/default/objects/Group__mdt/fields/Outgoing_Message_Settings__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Message_Settings__c</fullName>
    <label>Outgoing Message Settings</label>
    <referenceTo>Outgoing_Message_Settings__mdt</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>