unpackaged/main/default/objects/Group__mdt/fields/SelectFields__c.field-meta.xml
<CustomField>
    <fullName>SelectFields__c</fullName>
    <label>Select Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>