unpackaged/main/default/objects/Group__mdt/fields/WhereClause__c.field-meta.xml
<CustomField>
    <fullName>WhereClause__c</fullName>
    <label>Where Clause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>