unpackaged/main/default/objects/Group__mdt/listViews/CSSP_Detail.listView-meta.xml
<ListView>
    <fullName>CSSP_Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>Group_Size_Inbound__c</columns>
    <columns>DeveloperName</columns>
    <columns>Object__c</columns>
    <columns>WhereClause__c</columns>
    <columns>SelectFields__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>CSSP</value>
    </filters>
    <label>CSSP_Detail</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>