unpackaged/main/default/objects/Group__mdt/listViews/Google.listView-meta.xml
<ListView>
    <fullName>Google</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>Google</value>
    </filters>
    <label>Google</label>
</ListView>