unpackaged/main/default/objects/Group__mdt/listViews/Infinera.listView-meta.xml
<ListView>
    <fullName>Infinera</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>Infinera</value>
    </filters>
    <label>Infinera</label>
</ListView>