unpackaged/main/default/objects/Group__mdt/listViews/LedcorTest.listView-meta.xml
<ListView>
    <fullName>LedcorTest</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>LedcorTest</value>
    </filters>
    <label>LedcorTest</label>
</ListView>